# openclsolarsystem

./: .gitignore  CMakeLists.txt  Makefile  OpenCLSolarSystem.project  OpenCLSolarSystem.workspace  OpenCLSolarSystemUbuntu.workspace  README.md  adams.cl  application.cpp  application.hpp  clmodel.cpp  environment.bat  glcanvas.hpp  initialstate.cpp  license.txt  physicalproperties.hpp  setenv.ps1  vscode.ps1
.github/workflows/: build.yaml  ubuntu.yaml
OpenCLSolarSystem/: CMakeLists.txt  MakeGlewMingw.cmd  MakeGlewMingw.txt  OpenCLSolarSystem.mk  OpenCLSolarSystem.project  OpenCLSolarSystem.txt  OpenCLSolarSystemUbuntu.project  adams.cl  adamsdebug.cl  adamsfma.cl  application.cpp  application.hpp  astrorbsolexsmall.slf  buildOpenCLSolarSystem.txt  clmodel.cpp  clmodel.hpp  frame.cpp  frame.hpp  glcanvas.cpp  glcanvas.hpp  global.cpp  global.hpp  initialstate.cpp  initialstate.hpp  license.txt  physicalproperties.cpp  physicalproperties.hpp  readme.txt  todo.txt
OrbToSlf/: OrbToSlf.sln
OrbToSlf/OrbToSlf/: App.config  Double4.cs  EllipticMotion.cs  Info.csv  JPLHorizons.cs  JulianDayNumber.cs  Kepler.cs  OrbToSlf.AssemblyInfo.cs  OrbToSlf.csproj  Planets.cs  Program.cs  Settings.StyleCop  Utilities.cs  appsettings.json
OrbToSlf/OrbToSlf/Properties/: AssemblyInfo.cs
OrbToSlf/OrbToSlfConsole/: Info.csv  OrbToSlfConsole.csproj  Program.cs  appsettings.json
docs/: MakeGlewMingw.cmd  MakeGlewMingw.txt  Powershell2025.txt  buildOpenCLSolarSystem.txt  fetch.ps1
docs/ExamplevscodeUbuntu/: launch.json  post_cmake.sh  tasks.json
docs/ExamplevscodeWindows/: launch.json  settings.json
src/: Makefile
src/AdamsBashforthMoultonConstants/: AdamsBashforthMoultonConstants.sln
src/AdamsBashforthMoultonConstants/AdamsBashforthMoultonConstants/: AdamsBashforthMoultonConstants.csproj  Program.cs
src/Icon/: createIcon.py
src/OpenCLSolarSystem/: CMakeLists.txt  Makefile  adams.cl  adamsdebug.cl  adamsfma.cl  app.rc  application.cpp  application.hpp  clmodel.cpp  clmodel.hpp  frame.cpp  frame.hpp  glcanvas.cpp  glcanvas.hpp  global.cpp  global.hpp  initialstate.hpp  kernels.cpp  kernels.hpp  openclsolarsystem.desktop  physicalproperties.hpp  readme.txt
src/OrbToSlf/: CMakeLists.txt  Makefile  OrbToSlf.sln
src/OrbToSlf/OrbToSlf/: ApproximatePlanets.cs  AstroHandler.cs  BodyInfo.cs  Constants.cs  Double4.cs  EllipticMotion.cs  IPlanets.cs  IRemoteBodyInfosSource.cs  JPLHorizons.cs  JulianDayNumber.cs  Kepler.cs  MpcHandler.cs  OrbToSlf.AssemblyInfo.cs  OrbToSlf.csproj  Planets.cs  Process.cs  Settings.StyleCop  Utilities.cs
src/OrbToSlf/OrbToSlf.Tests/: OrbToSlf.Tests.csproj  UtilitiesTests.cs
src/OrbToSlf/OrbToSlfConsole/: CommandLineArgumentsParser.cs  CustomConsoleLoggerProvider.cs  OrbToSlfConsole.csproj  Program.cs  appsettings.json
src/OrbToSlf/OrbToSlfConsole.Tests/: CommandLineArgumentsParserTests.cs  OrbToSlfConsole.Tests.csproj
src/OrbToSlf/OrbToSlfConsole/Properties/: launchSettings.json
